privatebin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: privatebin
  labels:
    istio-injection: enabled
