privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
spec:
  selector:
    app: privatebin
  ports:
    - name: http
      port: 80          # Service port
      targetPort: 8080  # Container port
