privatebin/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: privatebin-gateway
  namespace: privatebin
spec:
  selector:
    istio: istio-gateway  # Match your istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "privatebin.local.gwg313.xyz"
