privatebin/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: privatebin
  namespace: privatebin
spec:
  hosts:
  - privatebin.local.gwg313.xyz
  gateways:
  - privatebin/privatebin-gateway
  http:
  - route:
    - destination:
        host: privatebin
        port:
          number: 80
